# Wokwi-Sensor-Temperatura-Presenca

./: CMakeLists.txt  README.md  diagram.json  wokwi.toml
src/: config.h  http_client.c  http_client.h  lwipopts.h  main.c  sensor.c  sensor.h  timer_handler.c  timer_handler.h  wifi.c  wifi.h
